--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ makeMoveable();
 	  } else if (Type == 1) {
 		errorBox.setAttribute('style', 'display: block;')
 		content.innerHTML =  newContent
-		document.getElementById("error-header").innerHTML = newTitle
+		document.getElementByClassName("error-header").innerHTML = newTitle
 	  }
   }
   </script>
