--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 	<button onclick="Message(0, 'null', 'null')">x</button>
 	Error
 	</div>
-	<div class="padding">
+	<span class="padding">
 	<span> <span class="block-line"><span><span style="color:#9400D3">b</span><span style="color:#4B0082">a</span><span style="color:#0000FF">n</span><span style="color:#00FF00">a</span><span style="color:#FFFF00">n</span><span style="color:#FF7F00">a</span></span></span></span>
-	</div>
+	</span>
 	</div>
   
     <div class="window" data-number="1" style="left: 50px; top: 50px;">
