--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
 
   <div id="windows">
 	<div class="errorBox" id="errorBox">
+	<div class="header">
 	<div class="error-header">
-	<button onclick="Message(0, 'null', 'null')">x</button>
 	Error
+	</div>
+	<button onclick="Message(0, 'null', 'null')">x</button>
 	</div>
 	<span class="padding">
 	<span> <span class="block-line"><span><span style="color:#9400D3">b</span><span style="color:#4B0082">a</span><span style="color:#0000FF">n</span><span style="color:#00FF00">a</span><span style="color:#FFFF00">n</span><span style="color:#FF7F00">a</span></span></span></span>
