--- a/index.html
+++ b/index.html
@@ -72,17 +72,27 @@
 	<button onclick="Message('1','Error','Error')">New error</button>
 
   <div id="windows">
-	<div class="errorBox" id="errorBox">
-	<div class="header">
-	<div class="error-header">
-	Error
-	</div>
-	<button onclick="Message(0, 'null', 'null')">x</button>
-	</div>
-	<span class="padding">
-	<span> <span class="block-line"><span><span style="color:#9400D3">b</span><span style="color:#4B0082">a</span><span style="color:#0000FF">n</span><span style="color:#00FF00">a</span><span style="color:#FFFF00">n</span><span style="color:#FF7F00">a</span></span></span></span>
-	</span>
-	</div>
+<div class="errorBox" id="errorBox">
+  <div class="header">
+    <div class="error-header">
+      Error
+    </div>
+    <button onclick="Message(0, 'null', 'null')">x</button>
+  </div>
+  <div class="padding">
+    <span class="block-line">
+      <span>
+        <span style="color:#9400D3">b</span>
+        <span style="color:#4B0082">a</span>
+        <span style="color:#0000FF">n</span>
+        <span style="color:#00FF00">a</span>
+        <span style="color:#FFFF00">n</span>
+        <span style="color:#FF7F00">a</span>
+      </span>
+    </span>
+  </div>
+</div>
+
   
     <div class="window" data-number="1" style="left: 50px; top: 50px;">
       <div class="window-header">
@@ -265,18 +275,19 @@ makeMoveable();
 function Message(Type, newContent, newTitle) {
   let errorBox = document.getElementById('errorBox');
   
-  // Just target the first element with the padding class
+  // Select the first .padding element to update its content
   let content = document.querySelector('.padding'); 
 
   if (Type == 0) {
-    errorBox.style.display = 'none';
+    errorBox.style.display = 'none'; // Hide the error box when Type is 0
   } else if (Type == 1) {
-    errorBox.style.display = 'block';
-    content.innerHTML = newContent; // Set the content inside the error box
+    errorBox.style.display = 'block'; // Show the error box
+    content.innerHTML = newContent; // Set the content inside the padding
     // Update the error title
     document.querySelector(".error-header").innerHTML = newTitle;
   }
 }
+
 
   </script>
 </body>
