--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 	<button onclick="Message('1','Error','Error')">New error</button>
 
   <div id="windows">
-<div class="errorBox" id="errorBox">
+	<div class="errorBox" id="errorBox">
   <div class="header">
     <div class="error-header">
       Error
     </div>
-    <button onclick="Message(0, 'null', 'null')">x</button>
+    <button onclick="Message(0, 'null', 'null')" class="close-btn">x</button>
   </div>
   <div class="padding">
     <span class="block-line">
@@ -92,6 +92,7 @@
     </span>
   </div>
 </div>
+
 
   
     <div class="window" data-number="1" style="left: 50px; top: 50px;">
