--- a/index.html
+++ b/index.html
@@ -16,27 +16,32 @@
       box-sizing: border-box;
     }
 
-    .window-header, .error-header {
-      background-color: #f2faee ;
-      border-bottom: 1px solid #aaa;
-      padding: 5px;
-      cursor: move;
-	  color: black;
-    }
+   .window-header, .error-header {
+  background-color: #f2faee;
+  border-bottom: 1px solid #aaa;
+  padding: 5px;
+  cursor: move;
+  color: black;
+}
 
-	.error-header {
-		background-color: #0D0511;
-		color: white;
-		cursor: auto;
-	    border-bottom: 1px solid #555;
-	}
-    .content {
-      padding: 10px;
-    }
+.error-header {
+  background-color: #0D0511;
+  color: white;
+  cursor: auto;
+  border-bottom: 1px solid #555;
+}
 
-    button {
-      float: right;
-    }
+.content {
+  padding: 10px;
+}
+
+button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
 	
 	.errorBox {
 	width: 150px;
