--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   padding: 10px;
 }
 
-button {
+.colorButton {
   background: none;
   border: none;
   color: white;
@@ -82,7 +82,7 @@ button {
     <div class="error-header">
       Error
     </div>
-    <button onclick="Message(0, 'null', 'null')" class="close-btn">x</button>
+    <button onclick="Message(0, 'null', 'null')" class="colorButton">x</button>
   </div>
   <div class="padding">
     <span class="block-line">
