--- a/index.html
+++ b/index.html
@@ -1,75 +1,7 @@
 <!DOCTYPE html>
  <html>
 <head>
-  <style>
-    body {
-      margin: 0;
-    }
-
-    .window {
-      position: absolute;
-      border: 2px solid black;
-      width: 250px;
-      height: 200px;
-      background-color: white;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-   .window-header, .error-header {
-  background-color: #f2faee;
-  border-bottom: 1px solid #aaa;
-  padding: 5px;
-  cursor: move;
-  color: black;
-}
-
-.error-header {
-  background-color: #0D0511;
-  color: white;
-  cursor: auto;
-  border-bottom: 1px solid #555;
-}
-
-.content {
-  padding: 10px;
-}
-
-.colorButton {
-  background: none;
-  border: none;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-}
-	
-	.errorBox {
-	width: 150px;
-	hight: 100px;
-	border: 2px solid white;
-	z-index: 4;
-	left: 574px; top: 249px;
-	position: absolute;
-	filter: invert(1);
-	mix-blend-mode: difference;
-	background-color: black;
-	color: white;
-	}
-	
-	.padding {
-		padding: 10px
-	}
-	
-	.resize-handle {
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  right: 0;
-  bottom: 0;
-  cursor: se-resize;
-  background: #ccc;
-}
-  </style>
+	  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div id="desktop">
