--- a/index.html
+++ b/index.html
@@ -227,6 +227,21 @@ function Message(Type, newContent, newTitle) {
   }
 }
 
+let fs = {
+	"root":[
+		"usr":[
+			"desktop":[
+				"text.txt": "Hello im a txt file. /N My name is /B bob /B"
+			]
+		],
+		"prg": [
+		
+		],
+		"sys":[
+		
+		]
+	]
+}
 
   </script>
 </body>
