--- a/index.html
+++ b/index.html
@@ -227,21 +227,21 @@ function Message(Type, newContent, newTitle) {
   }
 }
 
-let fs = {
+let fs = '{
 	"root":[
 		"usr":[
 			"desktop":[
-				"text.txt": "Hello im a txt file. /N My name is /B bob /B"
+				"text.txt": "Hello im a txt file. <nl> My name is <b> bob <b>"
 			]
 		],
-		"prg": [
-		
+		"prog": [
+		"file.txt":"this is a file"
 		],
 		"sys":[
-		
+		"systemFile":"this is a system file"
 		]
 	]
-}
+}'
 
   </script>
 </body>
