--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ function Message(Type, newContent, newTitle) {
   }
 }
 
-let fs = '{
+let fs = `{
 	"root":[
 		"usr":[
 			"desktop":[
@@ -241,7 +241,7 @@ let fs = '{
 		"systemFile":"this is a system file"
 		]
 	]
-}'
+}`
 
   </script>
 </body>
